--- a/DockerfileDevelop
+++ b/DockerfileDevelop
@@ -1,5 +1,3 @@
-FROM jare/alpine-vim:latest as vim
-
 FROM ruby:2.5.1-alpine3.7
 
 WORKDIR  /app
@@ -7,6 +5,8 @@ WORKDIR  /app
 ENV PATH /app/bin:/root/.yarn/bin:$PATH
 ENV BUNDLE_BIN /app/bin
 ENV HISTFILE=/app/tmp/bash_history
+ENV NODE_VERSION 10.6.0
+ENV YARN_VERSION 1.7.0
 
 COPY alphine_minimum_shared_install.sh ./
 COPY alphine_shared_install.sh ./
@@ -21,6 +21,8 @@ RUN vim +PluginInstall +qall
 RUN apk add tmux
 COPY .tmux.conf /root/.tmux.conf
 RUN echo 'export PATH="/app/bin:$PATH"' >> /etc/profile
+
+RUN node -v
 
 RUN yarn global add eslint eslint-config-standard \
   eslint-plugin-import \
