--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
       - .:/app
       - bundle:/usr/local/bundle
       - node_modules:/app/node_modules
+      - ~/.ssh:/root/.ssh
       - ~/.gitconfig:/root/.gitconfig
     depends_on:
       - db
