--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       args:
         - UID=${uid}
         - GID=${gid}
+        - USER_NAME=${USER}
     environment:
       - DB_PASSWORD=password
       - DB_HOST=db
@@ -46,11 +47,12 @@ services:
       - .:/app
       - bundle:/usr/local/bundle
       - node_modules:/app/node_modules
-      - ~/.ssh:/root/.ssh
+      - ~/.ssh:/user/.ssh
       - ~/.gitconfig:/root/.gitconfig
     depends_on:
       - db
       - webpack
+      - selenium
 
   selenium:
     image: selenium/standalone-chrome-debug:latest
