specs(coverage): add api controller tests
add shared examples for api/v1 and add
controller tests

--- a/DockerfileDevelop
+++ b/DockerfileDevelop
@@ -38,6 +38,9 @@ RUN yarn global add eslint eslint-config-standard \
 
 RUN apk add vim tmux
 
+RUN chown -R $UID /usr/local/bundle
+RUN chown -R $UID /usr/local/bundle
+
 RUN usermod -m -d /user node
 USER $UID:$GID
 
