feature(mvc, fixes): add time_zone and fix some issues
- add time_zone to organization
- fix create record and redirect url

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       - .:/app
       - bundle:/usr/local/bundle
       - ~/.ssh:/user/.ssh
-      - ~/.gitconfig:/root/.gitconfig
+      - ~/.gitconfig:/user/.gitconfig
     depends_on:
       - db
       - selenium
