--- a/DockerfileGitlab
+++ b/DockerfileGitlab
@@ -4,7 +4,6 @@ FROM ruby:2.5.1-alpine3.7
 
 WORKDIR  /app
 
-ENV PATH /root/.yarn/bin:$PATH
 ENV BUNDLE_BIN /app/bin
 ENV YARN_VERSION 1.7.0
 
@@ -29,6 +28,8 @@ RUN [ -e config/database.yml ] && rm config/database.yml || true
 RUN RAILS_ENV=production SECRET_KEY_BASE='9479a648d2fb' \
   DATABASE_URL=postgres://root:password@db%5Ftest/root \
   rake assets:precompile
+
+RUN mkdir /assets && cp -r /app/public/assets /assets
 
 # speed up tests on gitlab-ci
 RUN mkdir -p /root/node_modules
