--- a/chart/templates/database_deployment.yaml
+++ b/chart/templates/database_deployment.yaml
@@ -20,7 +20,7 @@ spec:
             - name: POSTGRES_USER
               value: root
             - name: POSTGRES_PASSWORD
-              value: password
+              value: {{ .Values.db_password }}
             {{ if .Values.remote }}
             - name: PGDATA
               value: /var/lib/postgresql/data/pgdata
