--- a/chart/templates/ingress.yml
+++ b/chart/templates/ingress.yml
@@ -3,7 +3,9 @@ kind: Ingress
 metadata:
   name: cmc-ingress
   annotations:
-    kubernetes.io/ingress.class: "nginx"
+    certmanager.k8s.io/cluster-issuer: {{ .Values.cluster_issuer }} 
+    kubernetes.io/ingress.class: nginx
+    kubernetes.io/tls-acme: "true"
 spec:
   rules:
   - host: {{ .Values.url }}
@@ -13,6 +15,10 @@ spec:
           backend:
             serviceName: cmc-service
             servicePort: 80
+        - path: /
+          backend:
+            serviceName: cmc-database
+            servicePort: 5432
   - host: "*.{{ .Values.url }}"
     http:
       paths:
@@ -21,4 +27,9 @@ spec:
             serviceName: cmc-service
             servicePort: 80
 
+  tls:
+    - hosts:
+        - "*.{{ .Values.url }}"
+        - "{{ .Values.url }}"
+      secretName: cost-manager-tls
 
