--- a/chart/templates/web_deployment.yaml
+++ b/chart/templates/web_deployment.yaml
@@ -22,7 +22,7 @@ spec:
             - containerPort: 3000
           env:
             - name: DATABASE_URL
-              value: 'postgres://root:password@cmc-database/database'
+              value: 'postgres://root:{{ .Values.db_password }}@cmc-database/database'
             - name: SECRET_KEY_BASE
               value: {{ .Values.secret_key_base }}
             - name: RAILS_ENV
