--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - POSTGRES_DB=root
     volumes:
       - db_volume:/var/lib/postgresql/data
+    ports: 
+      - 6432:5432
 
   webpack:
     image: cmc
