feature(helm): make database accessible
Why:
- To access the database with the pgAdmin

This change addresses the need by:
- Add external ip to the database service

--- a/chart/templates/database_service.yaml
+++ b/chart/templates/database_service.yaml
@@ -5,6 +5,8 @@ metadata:
   labels:
     name: cmc-database
 spec:
+  externalIPs:
+    - {{ .Values.external_ip }}
   ports:
     - port: 5432
   selector:
