--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -158,7 +158,8 @@ deploy:
           --set image.tag=$CI_COMMIT_SHA
           --set remote=true
           --set cluster-issuer=letsencrypt-production
-          --set db-password=$DB_PASSWORD
+          --set db_password=$DB_PASSWORD
+          --set external_ip=159.65.252.140
           --set url=cost-manager.com;
       else
         helm upgrade cmc-production chart
@@ -166,6 +167,7 @@ deploy:
           --set remote=true
           --set cluster_issuer=letsencrypt-production
           --set db_password=$DB_PASSWORD
+          --set external_ip=159.65.252.140
           --set url=cost-manager.com
           --force;
       fi
