feature(helm): add volume claim support
Why:
- To make the app portable
- To make in compatible with the submit helm specs

This was archived by:
- Add PersistentVolumeClaim
- Adjust web_deployment

--- a/chart/templates/database_deployment.yaml
+++ b/chart/templates/database_deployment.yaml
@@ -21,22 +21,16 @@ spec:
               value: root
             - name: POSTGRES_PASSWORD
               value: {{ .Values.db_password }}
-            {{ if .Values.remote }}
             - name: PGDATA
               value: /var/lib/postgresql/data/pgdata
-            {{ end }}
           ports:
             - containerPort: 5432
               name: cmc-database
-          {{ if .Values.remote }}
           volumeMounts:
             - name: cmc-database-volume
               mountPath: /var/lib/postgresql/data
-          {{ end }}
 
-      {{ if .Values.remote }}
       volumes:
         - name: cmc-database-volume
-          hostPath:
-            path: "/databases/cmc"
-      {{ end }}
+          persistentVolumeClaim:
+            claimName: cmc-db-pvc
