--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "d3": "^5.5.0",
     "d3-3": "^0.0.0",
     "d3-3d": "^0.0.9",
+    "dayspan-vuetify": "^0.3.2",
     "eslint-plugin-vue": "^4.7.1",
     "jsdom": "^11.5.1",
     "jsdom-global": "^3.0.2",
@@ -34,6 +35,7 @@
     "vue-template-compiler": "^2.5.16",
     "vue-turbolinks": "^2.0.0",
     "vuedraggable": "^2.15.0",
+    "vuetify": "1.1.1",
     "vuex": "^3.0.1",
     "webpack-node-externals": "^1.6.0"
   },
