fix(helm): crash psql version
Why:
- crash

Was archived by:
- set psql version to 11 on helm

--- a/chart/templates/database_deployment.yaml
+++ b/chart/templates/database_deployment.yaml
@@ -12,7 +12,7 @@ spec:
         name: cmc-database
     spec:
       containers:
-        - image: postgres:latest
+        - image: postgres:10-alpine
           name: cmc-database
           env:
             - name: POSTGRES_DB
