--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vuedraggable": "^2.15.0",
     "vuetify": "1.1.1",
     "vuex": "^3.0.1",
+    "vuex-jsonapi-client": "^1.2.5",
     "webpack-node-externals": "^1.6.0"
   },
   "devDependencies": {
