--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -147,30 +147,27 @@ deploy:
     - echo $KUBE_CONFIG | base64 -d > ~/.kube/config
     - kubectl config use-context kubernetes-admin@kubernetes
     - helm init --upgrade
-    - export DEPLOYS=$(helm ls | grep cmc-production | wc -l)
     - export LOGS_COMAND="\$(kubectl get pods -l name=cmc-migrate-task | sed -n 2p | awk '{print \$1}')"
     - sleep 2 &&
       until kubectl logs $(eval echo $LOGS_COMAND) && kubectl logs -f $(eval echo $LOGS_COMAND); do
         sleep 0.2;
       done &
-    - if [ ${DEPLOYS}  -eq 0 ]; then
-        helm install chart --name cmc-production
-          --set image.tag=$CI_COMMIT_SHA
-          --set remote=true
-          --set cluster-issuer=letsencrypt-production
-          --set db_password=$DB_PASSWORD
-          --set external_ip=159.65.252.140
-          --set url=cost-manager.com;
-      else
-        helm upgrade cmc-production chart
-          --set image.tag=$CI_COMMIT_SHA
-          --set remote=true
-          --set cluster_issuer=letsencrypt-production
-          --set db_password=$DB_PASSWORD
-          --set external_ip=159.65.252.140
-          --set url=cost-manager.com
-          --force;
-      fi
+    - echo $CHART_VALUES > values.yaml
+    - helm upgrade cmc-production cmc --install --force
+        --set image.tag=$CI_COMMIT_SHA
+        --set multiTenant=true
+        --set databasePassword=$DB_PASSWORD
+        --set ingress.enabled=true
+        --set ingress.url="cost-manager.com"
+        --set ingress.annotations."certmanager\.k8s\.io/cluster-issuer"=letsencrypt-production 
+        --set ingress.annotations."kubernetes\.io/ingress\.class"=nginx 
+        --set ingress.annotations."kubernetes\.io/tls-acme"="true"
+        --set ingress.tls[0].secretName=cost-manager-tls
+        --set ingress.tls[0].hosts[0]="*.cost-manager.com"
+        --set ingress.tls[0].hosts[1]="cost-manager.com"
+        --set databasePersistence.storageClassName=cmc-db
+        --set webPersistence.storageClassName=cmc-web
+
   only:
     - master
   except:
