chore: Improve dc-exec and improve README
Why:
- dc-exec: allow use ./dc-exec down
- dv-exec: fix warning about uid and gid
- readme: how use multi tenant on localhost

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
       dockerfile: DockerfileDevelop
       context: .
       args:
-        - UID=${uid}
-        - GID=${gid}
+        - uid=${uid}
+        - gid=${gid}
         - USER_NAME=${USER}
     environment:
       - DB_PASSWORD=password
