--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "style-loader": "^0.21.0",
     "tui-editor": "^1.0.0",
     "vue": "^2.5.16",
+    "vue-bootstrap-datetimepicker": "^5.0.1",
     "vue-loader": "14.2.2",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
