--- a/cmc/templates/nginx-config-map.yml
+++ b/cmc/templates/nginx-config-map.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: cmc-nginx-conf
+  name: {{ .Release.Name }}-nginx-conf
 data:
   nginx.conf: |
     user nginx;
