feature: add admin_area
Why:
- See name of all organizations

Was archived by:
- Add new namespace named AdminArea
- Add admin_area/organization#index

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -164,6 +164,7 @@ deploy:
         --set databasePersistence.storageClassName=openebs-standard
         --set webPersistence.storageClassName=openebs-standard
         --set postgresql.persistence.storageClass=openebs-standard
+        --set admin_password=$ADMIN_PASSWORD
   only:
     - master
   except:
