--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ stages:
 variables:
   CONTAINER_RELEASE_IMAGE: $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
   CONTAINER_RELEASE_IMAGE_LATEST: $CI_REGISTRY_IMAGE:latest
+  CONTAINER_RELEASE_IMAGE_TEST: $CI_REGISTRY_IMAGE:test
   POSTGRES_PASSWORD: password
   POSTGRES_DB: root
   POSTGRES_USER: root
@@ -132,10 +133,9 @@ build_test:
   services:
     - docker:dind
   script:
-    - apk update
-    - apk add make
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-    - make build_and_push_test_image
+    - docker build -f DockerfileGitlab -t $CONTAINER_RELEASE_IMAGE_TEST .
+    - docker push $CONTAINER_RELEASE_IMAGE_TEST
   only:
     - schedules
 
